...
        }))
        alert.addAction(UIAlertAction(title: "Cancel", style: .Default, handler: {
            (action: UIAlertAction) -> Void in
        }))
        alert.addTextFieldWithConfigurationHandler({
            (textField: UITextField!) in
            textField.placeholder = "Enter Name"
        })
        alert.addTextFieldWithConfigurationHandler({
            (textField: UITextField!) in
            textField.placeholder = "Enter Value ($$)"
        })
        self.presentViewController(alert, animated: true, completion: nil)
        self.view.endEditing(true)
    }
    
    // MARK: View Controller
...
