...
            </objects>
            <point key="canvasLocation" x="-377" y="355"/>
        </scene>
        <!--Main Menu-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController title="Main Menu" id="BYZ-38-t0r" customClass="MainMenuViewController" customModule="Smudget" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
